docs/versioned_docs/version-0.15/get-started/what-is-prisme-analytics.md
---
slug: /
sidebar_position: 1
---

# What Is Prisme Analytics ?

Prisme Analytics is an **Open Source**, **privacy-focused** and **progressive
web analytics service**.

Let's see what this means in detail.

## Web Analytics

From [wikipedia](https://en.wikipedia.org/wiki/Web_analytics) definition:

> First and foremost, **web analytics** is the **measurement**, collection,
> analysis, and reporting of **web data** to **understand and optimize web
> usage**. It can be used to estimate how traffic to a website changes after
> launching a new advertising campaign. It helps gauge traffic and popularity
> trends, which is useful for market research.

Web Analytics tools do essentially 3 things:

- Collect data
- Store data
- Visualize data

There are
[plenty of Web Analytics tools](https://en.wikipedia.org/wiki/List_of_web_analytics_software)
such as Google Analytics and Matomo but Prisme Analytics approach is **unique**.

## Progressive

Prisme Analytics is a **progressive** solution, allowing for quick adoption
within minutes for basic needs while also being **adaptable** to meet your
specific requirements.

### Tailored Analytics

Since v0.14.0, Prisme supports collecting custom events with **arbitrary** data.
You can create events that matters to your specific business and then
**visualize** them **the way you want** (pie chart, time serie, gauge, etc).

### Ready to Use

Prisme provides a general dashboard and common metrics to help you get started.
Number of visits, page views and more are built-in so you don't have to reinvent
the wheel.

## Privacy-focused

Prisme Analytics is designed with users privacy in mind. We don't collect
personally identifiable information (PII) and we minimize data collection to the
strict necessary.

We're GDPR, CCPA and PECR compliant by design.

Also, we don't use cookies so you can ditch your cookie banner!

## Deeply Open Source

Affirming our commitment to user privacy is one aspect; substantiating it is
another. Because Prisme Analytics is in alignment with the Open Source
Initiative's (OSI) [definition of Open Source](https://opensource.org/osd), you
have the freedom to read, modify, redistribute, and even fork it to develop your
own version of Prisme.

Prisme Analytics source code and license are available
[here](https://github.com/prismelabs/analytics) and
[here](https://github.com/prismelabs/analytics/blob/master/LICENSE)
respectively.
